Fix compilation on Android with the bionic C library

https://bugzilla.gnome.org/show_bug.cgi?id=689223